--- a/index.html
+++ b/index.html
@@ -4,48 +4,50 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carrinho de Compras</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <main class="main-container">
     <section class="section">
-			<h2 class="text-center">Produtos Apple</h2>
+			<h1 class="text-center">Produtos Apple</h1>
 			<div class="products">
 				<div class="product">
 					<img class="product__image" src="img/_apple-tv.svg" alt="Beer">
 					<h2 class="product__name">Apple Tv</h2>
-					<h3 class="product__price">6.00</h3>
+					<h3 class="product__price"> 1.199,00</h3>
 					<button class="btn btn--primary" data-action="ADD_TO_CART">Adicionar ao Carrinho</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/_imac.svg" alt="Energy Drink">
 					<h2 class="product__name">Apple iMac</h2>
-					<h3 class="product__price">5.00</h3>
+					<h3 class="product__price"> 15.599,00</h3>
 					<button class="btn btn--primary" data-action="ADD_TO_CART">Adicionar ao Carrinho</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/_macbook.svg" alt="Juice">
 					<h2 class="product__name">MacBook Pro</h2>
-					<h3 class="product__price">4.00</h3>
+					<h3 class="product__price"> 14.299,00</h3>
 					<button class="btn btn--primary" data-action="ADD_TO_CART">Adicionar ao Carrinho</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/_apple-watch.svg" alt="Milk">
 					<h2 class="product__name">Apple Watch</h2>
-					<h3 class="product__price">2.50</h3>
+					<h3 class="product__price"> 2.599,00</h3>
 					<button class="btn btn--primary" data-action="ADD_TO_CART">Adicionar ao Carrinho</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/_mac-mini.svg" alt="Mineral Water">
 					<h2 class="product__name">Mac mini</h2>
-					<h3 class="product__price">1.00</h3>
+					<h3 class="product__price"> 6.699,00</h3>
 					<button class="btn btn--primary" data-action="ADD_TO_CART">Adicionar ao Carrinho</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/_apple_ipad.svg" alt="Smoothie">
 					<h2 class="product__name">Apple iPad</h2>
-					<h3 class="product__price">6.00</h3>
+					<h3 class="product__price"> 2.999,00</h3>
 					<button class="btn btn--primary" data-action="ADD_TO_CART">Adicionar ao Carrinho</button>
 				</div>
 			</div>
