Primeira etapa finalizada

--- a/index.html
+++ b/index.html
@@ -17,40 +17,45 @@
 				<div class="product">
 					<img class="product__image" src="img/_apple-tv.svg" alt="Beer">
 					<h2 class="product__name">Apple Tv</h2>
-					<h3 class="product__price"> 1.199,00</h3>
-					<button class="btn btn--primary" data-action="ADD_TO_CART">Adicionar ao Carrinho</button>
+					<h3 class="product__price">80,00</h3>
+					<button class="btn btn--primary" id="add-to-cart">Comprar</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/_imac.svg" alt="Energy Drink">
-					<h2 class="product__name">Apple iMac</h2>
-					<h3 class="product__price"> 15.599,00</h3>
-					<button class="btn btn--primary" data-action="ADD_TO_CART">Adicionar ao Carrinho</button>
+					<h2 class="product__name">iMac</h2>
+					<h3 class="product__price">95,00</h3>
+					<button class="btn btn--primary" id="add-to-cart">Comprar</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/_macbook.svg" alt="Juice">
-					<h2 class="product__name">MacBook Pro</h2>
-					<h3 class="product__price"> 14.299,00</h3>
-					<button class="btn btn--primary" data-action="ADD_TO_CART">Adicionar ao Carrinho</button>
+					<h2 class="product__name">MacBook</h2>
+					<h3 class="product__price">90,00</h3>
+					<button class="btn btn--primary" id="add-to-cart">Comprar</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/_apple-watch.svg" alt="Milk">
 					<h2 class="product__name">Apple Watch</h2>
-					<h3 class="product__price"> 2.599,00</h3>
-					<button class="btn btn--primary" data-action="ADD_TO_CART">Adicionar ao Carrinho</button>
+					<h3 class="product__price">99,00</h3>
+					<button class="btn btn--primary" id="add-to-cart">Comprar</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/_mac-mini.svg" alt="Mineral Water">
 					<h2 class="product__name">Mac mini</h2>
-					<h3 class="product__price"> 6.699,00</h3>
-					<button class="btn btn--primary" data-action="ADD_TO_CART">Adicionar ao Carrinho</button>
+					<h3 class="product__price">98,00</h3>
+					<button class="btn btn--primary" id="add-to-cart">Comprar</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/_apple_ipad.svg" alt="Smoothie">
-					<h2 class="product__name">Apple iPad</h2>
-					<h3 class="product__price"> 2.999,00</h3>
-					<button class="btn btn--primary" data-action="ADD_TO_CART">Adicionar ao Carrinho</button>
+					<h2 class="product__name">iPad</h2>
+					<h3 class="product__price">99,00</h3>
+					<button class="btn btn--primary" id="add-to-cart">Comprar</button>
 				</div>
 			</div>
+		</section>
+
+    <section class="section">
+			<h2 class="text-center">Carrinho</h2>
+			<div class="cart"></div>
 		</section>
   </main>
 
