Atualização do arquivo README.md; atualização nos estilos e atualização no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		</section>
 
     <section class="section">
-			<h2 class="text-center">Carrinho</h2>
+			<h2 class="text-center">Carrinho de Compras</h2>
 			<div class="cart"></div>
 		</section>
   </main>
