--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <main class="main-container">
     <section class="section">
-			<h1 class="text-center">Produtos Apple</h1>
+			<h1 class="text-center">Produtos</h1>
 			<div class="products">
 				<div class="product">
 					<img class="product__image" src="img/_apple-tv.svg" alt="Beer">
@@ -54,7 +54,7 @@
 		</section>
 
     <section class="section">
-			<h2 class="text-center">Carrinho de Compras</h2>
+			<h2 class="text-center">Carrinho</h2>
 			<div class="cart"></div>
 		</section>
   </main>
